<resources>
    <string name="beedee_name">labeauty</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="complete">完成</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="account_security">账户安全</string>
    <string name="branch_show">品牌介绍</string>
    <string name="app_introduce">APP说明</string>
    <string name="about_us">关于我们</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="advice_problem"> 投诉建议</string>
    <string name="fill_myself_info">完善资料</string>
    <string name="get_vertify_code">获取验证码</string>
    <string name="mobile_number_wrong">请输入正确的手机号</string>
    <string name="gallery">相册</string>
    <string name="confirm">确定</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="binded_mobile">绑定手机号</string>
    <string name="update_mobile">更改手机号</string>
    <string name="update_pwd">更改密码</string>
    <string name="my_favorite">我的收藏</string>
    <string name="update_success">修改成功</string>
    <string name="scan_result">检测结果</string>
    <string name="latest_recommend_goods">最新主推</string>
    <string name="hot_outfits">人气穿搭</string>
    <string name="cancel">取消</string>
    <string name="bee_settings">设置</string>
    <string name="feedback_hint">如果您对我们有什么建议、想法和期望，请告诉我们。</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="register_protocol">注册协议</string>
    <string name="ancila">ANCILA</string>
    <string name="brand_desc">品牌介绍</string>
    <string name="my_integral">我的积分</string>
    <string name="available_integral">可用积分</string>
    <string name="lucky_pay_integral">积分抽奖</string>
    <string name="daily_login_integral">每次首次登陆+10积分</string>
    <string name="_100_consume_integer">100积分/次</string>
    <string name="my_prize">我的奖品</string>
    <string name="my_discounts">我的优惠劵</string>
    <string name="to_use_instant">立即使用</string>
    <string name="discount_card">优惠劵</string>
    <string name="submit_instantly">立即提交</string>
    <string name="issue_type">问题类型</string>
    <string name="detail_desc">详情描述</string>
    <string name="my_message">我的消息</string>

    <string name="function_exception">功能异常</string>
    <string name="function_issue">不能正常使用现有功能</string>
    <string name="usage_advice">使用建议</string>
    <string name="usage_feedback">用的不满意的地方都踢过来吧</string>
    <string name="function_request">功能需求</string>
    <string name="function_not_complete">现有功能不能满足</string>
    <string name="phone_number">手机号</string>
    <string name="dear_user">亲爱的用户</string>
    <string name="usage_integral">可用积分</string>
    <string name="try_lucky">抽  奖</string>
    <string name="daily_sign_integral">每日首次登陆+10积分</string>
    <string name="my_address">我的地址</string>
    <string name="edit_address">填写地址</string>
    <string name="default_address">默认地址</string>
    <string name="empty_discount">亲，你暂时还没有优惠券哦</string>
    <string name="empty_entity_prize">亲，你暂时还没有实物奖品哦</string>
    <string name="empty_score_consume">你还没有消费记录哦~</string>
    <string name="empty_score_gain">你还没有获取过积分哦~</string>
    <string name="get_prize_instant">立即提货</string>
    <string name="get_prize_title">恭喜您，中奖了！</string>
    <string name="no_prize_title">很遗憾，未中奖！</string>
    <string name="no_prize_courage">继续努力，总有成为那个幸运儿的</string>
    <string name="get_prize_address_tip">中奖礼物请尽快填写地址哦</string>
    <string name="get_prize_deadline_tip">优惠券请在规定的时间内使用，过期无效</string>
    <string name="get_prize_integral_tip">积分已存入您的账户</string>
    <string name="extract_prize_instant">立即提货</string>

    <string name="empty_address">你还没有添加地址哦~</string>
    <string name="add_get_prize_info">+ 添加收货信息</string>
    <string name="extract_prize_success">提货成功</string>
    <string name="extract_prize_success_tip">亲爱的用户我们会尽快发出您的中奖商品请耐心等候</string>
    <string name="submit_success">提交成功</string>
    <string name="send_success">发送成功</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="submit_success_tip">亲爱的用户我们会在10个工作日落实此类事情再次感谢您的建议！</string>
    <string name="app_introduce_content">为了净化市场，减少假冒产品给我们顾客及LABEAUTY带来的负面影响和损失，维护企业和ANCILA品牌的形象和声誉，增强消费者购正规商品的信心，我们亲历推出本款APP。</string>
    <string name="app_feature">APP特点</string>
    <string name="app_feature_1">1、扫描商品二维码，快速检验真伪。</string>
    <string name="app_feature_2">2、完整展示labeauty产品，加深顾客对正品印象。</string>
    <string name="app_feature_3">3、专业的防伪溯源技术保障，专业技术团队。</string>
    <string name="app_feature_4">4、中日双语，无障碍使用。</string>
    <string name="app_feature_5">5、权威质检曝光。</string>
    <string name="home">首页</string>
    <string name="discovery">发现</string>
    <string name="inspect_defake">防伪检测</string>
    <string name="mine">我的</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_sms_code">请输入验证码</string>
    <string name="please_agree_protocol">请先同意使用协议</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_confirm_pwd">请确认密码</string>
    <string name="twice_pwd_difference">两次输入的密码不一致</string>
    <string name="intro_top_1">林之野在《琥珀屋》中说过，</string>
    <string name="intro_top_2">\"一个女人只有二十年的生命，其余的时间都在衰老。\"</string>
    <string name="intro_top_3">AANCILA品牌自2013年成立以来，</string>
    <string name="intro_top_4">一直遵从内心本真，与时间对抗，与美丽为伍。</string>
    <string name="intro_bottom_1">是一个蕴含生物科技的日本美容院线专业抗衰老品牌，致力于从生物科技中探索保持青春的生物密码。隶属日本LABEAUTY公司旗下品牌。（LABEAUTY是日本一家化妆品、美容仪器公司，于2013年在日本横滨成立，以”充满自信的美丽“为宗旨，开发和销售针对各种皮肤类型，量身定制不同的高端化妆品。）</string>
    <string name="intro_bottom_2">ANCILA不仅成为日本女性冻龄护肤的秘密，并于2018年成功入驻中国市场，受到了广大消费者的喜爱。品牌主打灯塔水母系列，坚持纯粹高效的护肤态度，实现了产品的深层补水和修复亮白。其中爆款水母面膜和逆时空水母胶原蛋白水乳霜逐渐在市场上有了一定影响力，受到了张韶涵、沈梦辰等明星的倾力推荐。</string>
    <string name="intro_bottom_3">以“成为高端护肤界的领先者”为企业愿景，ANCILA一直秉承“创新护肤、合理护肤”的新理念，希望把正确的护肤理念传递给有所追求的消费者。</string>
    <string name="please_open_storage_permission">请开启存储权限</string>
    <string name="please_open_storage_camera_permission">请开启存储和相机权限</string>
    <string name="defake">防伪</string>
    <string name="follow_source">溯源</string>
    <string name="inspect_result_real">扫描结果显示为正品</string>
    <string name="confirm_del_history">确定需要删除历史记录吗？</string>
    <string name="search_product">搜索产品</string>
    <string name="please_set_new_pwd">请设置新密码</string>
    <string name="please_set_new_pwd_agine">请再次输入新密码</string>
    <string name="please_input_key_words">请输入关键字</string>
    <string name="extract_expire_date">提货期限</string>
    <string name="connect_exception">连接异常</string>
    <string name="connect_timeout">连接超时</string>
    <string name="current_bind_mobile_number">您当前绑定的手机号</string>
    <string name="gender">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="old_pwd">旧密码</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="confirm_new_pwd">再次确认</string>
    <string name="please_input_old_pwd_again">请再次输入新密码</string>
    <string name="loading">正在加载</string>
    <string name="confirm_to_del">确定删除吗</string>
    <string name="tap_to_get">点击领取</string>
    <string name="recorder_get_integral">积分获取记录</string>
    <string name="recorder_out_integral">积分消费记录</string>
    <string name="confirm_quit">确定要退出吗</string>
    <string name="history_of_key_words">历史搜索记录</string>
    <string name="quit_current_account">退出当前账号</string>
    <string name="login_and_register">登录/注册</string>
    <string name="edit">编辑</string>
    <string name="please_input_address_detail">请输入详细地址</string>
    <string name="address_detail">详细地址</string>
    <string name="please_choose">请选择</string>
    <string name="please_input_address">填写地址</string>
    <string name="language">语言</string>
    <string name="chinese">中文</string>
    <string name="japanese">日语</string>
    <string name="take_effort_on_restart">设置后，会自动重启</string>
    <string name="video_title">精彩视频</string>
    <string name="newest_skin_recommend">护肤品推荐</string>
    <string name="send_time">发布时间：%1s</string>
    <string name="video_show_progress">护肤品展示过程</string>
    <string name="newest_recommend">最新推荐</string>
    <string name="has_join_my_prizes">已加入我的奖品</string>
    <string name="know_more">了解更多</string>
    <string name="start_inspect">开始检测</string>
    <string name="inspect_tips">点击开始检测，并对准条形码进行扫描</string>
    <string name="youhuijuan">优惠券</string>
    <string name="real_prize">实物奖品</string>
    <string name="version_story">版本说明</string>
    <string name="user_protocol">用户协议</string>
    <string name="privacy_protocol">隐私协议</string>
</resources>
