<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jacky.labeauty.ui.widget.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:titleView_title_text="@string/update_pwd" />

    <LinearLayout
        style="@style/gap_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qmui_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/first_margin_from_left"
                android:minWidth="59dp"
                android:text="@string/old_pwd" />

            <EditText
                android:id="@+id/et_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="@dimen/first_margin_from_left"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_old_pwd"
                android:textSize="@dimen/normal_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qmui_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/first_margin_from_left"
                android:minWidth="59dp"
                android:text="@string/new_pwd" />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="@dimen/first_margin_from_left"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_new_pwd"
                android:textSize="@dimen/normal_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qmui_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/first_margin_from_left"
                android:minWidth="59dp"
                android:text="@string/confirm_new_pwd" />

            <EditText
                android:id="@+id/et_confirm_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_old_pwd_again"
                android:textSize="@dimen/normal_textsize" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/confirm_button"
        android:layout_marginTop="47dp"
        android:text="@string/confirm" />

</LinearLayout>