<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.jacky.labeauty.ui.widget.TitleView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/white"
            app:titleView_title_text="@string/edit_address"
            app:titleView_visible_type="left_middle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="收货人" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shape_editable"
            android:hint="请填写收货人姓名"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="电话" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shape_editable"
            android:hint="请填写手机号码"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAddressCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="省/市/区" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProvince"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/address_editable_bg"
                android:gravity="center"
                android:text="请选择"
                android:textColor="#8b8b8d"
                android:textSize="13sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvShi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/address_editable_bg"
                android:gravity="center"
                android:text="请选择"
                android:textColor="#8b8b8d"
                android:textSize="13sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvXian"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/address_editable_bg"
                android:gravity="center"
                android:text="@string/please_choose"
                android:textColor="#8b8b8d"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/address_detail" />

        <EditText
            android:id="@+id/etAddressDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shape_editable"
            android:hint="@string/please_input_address_detail"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="72dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/shape_rect_gradient"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
