<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jacky.sub.beedee.ui.widget.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:titleView_title_text="@string/update_mobile" />

    <LinearLayout
        style="@style/gap_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qmui_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/first_margin_from_left"
                android:minWidth="59dp"
                android:text="新手机号" />

            <EditText
                android:id="@+id/et_new_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="@dimen/first_margin_from_left"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入新手机号"
                android:inputType="phone"
                android:textSize="@dimen/normal_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qmui_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/first_margin_from_left"
                android:minWidth="59dp"
                android:text="验证码" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="@dimen/first_margin_from_left">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/first_margin_from_left"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="请输入手机验证码"
                    android:inputType="phone"
                    android:textSize="@dimen/normal_textsize" />

                <Button
                    android:id="@+id/btn_gain_code"
                    style="@style/button_code_style"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/first_margin_from_left"
                    android:text="@string/get_vertify_code"
                    android:textColor="@color/action_confirm" />


            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/confirm_button"
        android:layout_marginTop="47dp"
        android:text="@string/confirm" />

</LinearLayout>