<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <FrameLayout
            android:id="@+id/top_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_backdrop"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jacky.lebeauty.ui.widget.TitleView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleView_left_drawable="@mipmap/ic_arrow_back_white"
            app:titleView_left_text="@string/back"
            app:titleView_left_text_color="@color/white"
            app:titleView_middle_text_color="@color/white"
            app:titleView_title_text="@string/forget_pwd">

        </com.jacky.lebeauty.ui.widget.TitleView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginTop="-55dp"
            android:src="@mipmap/ic_photo"
            app:layout_constraintBottom_toBottomOf="@+id/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_background" />

        <LinearLayout
            android:id="@+id/parent_gap_container"
            style="@style/gap_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:drawableLeft="@mipmap/ic_phone"
                android:drawablePadding="16dp"
                android:hint="请输入手机号"
                android:inputType="phone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_register"
                    android:drawablePadding="16dp"
                    android:hint="请输入验证码"
                    android:inputType="number"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/btn_gain_code"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/shape_rect_black"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/get_vertify_code"
                    android:textColor="@color/action_confirm" />

            </FrameLayout>


            <com.chaychan.viewlib.PowerfulEditText
                android:id="@+id/et_pwd"
                style="@style/normal_register_row_text"
                android:drawableLeft="@mipmap/ic_pwd"
                android:drawablePadding="16dp"
                android:hint="请设置新密码"
                android:inputType="textPassword"
                app:funcType="canWatchPwd" />

            <com.chaychan.viewlib.PowerfulEditText
                android:id="@+id/et_confirm_pwd"
                style="@style/normal_register_row_text"
                android:drawableLeft="@mipmap/ic_pwd"
                android:drawablePadding="16dp"
                android:hint="请再次输入新密码"
                android:inputType="textPassword"
                app:funcType="canWatchPwd" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_confirm"
            style="@style/confirm_button"
            android:layout_marginTop="25dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_gap_container" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>

